[package]
name = "cast-studio"
version = "0.1.0"
edition = "2021"
authors = ["Gregory Langlais <_@gregorylanglais.com>"]
description = "AI generated webcasting studio software."
license = "Proprietary"
publish = false
readme = "README.md"
repository = "https://github.com/gregl83/cast-studio"

[dependencies]
opencv = { version = "0.88", features = ["opencv-4", "buildtime-bindgen"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
opencv = { version = "0.88", features = ["opencv-4", "buildtime-bindgen"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

